# OOP-Lab-4

./: CMakeLists.txt  main.cpp
includes/: array.h  figure.h  hexagon.h  octagon.h  pentagon.h  point.h
src/: array.cpp  hexagon.cpp  octagon.cpp  pentagon.cpp
tests/: CMakeLists.txt  test.cpp
